# hr-copilot

./: .gitignore  HR_Copilot_BS_ERD.md  HR_Copilot_BS_테이블정의서.md  README.md  package-lock.json  stage2-basic-test-checklist.md
backend/: .env_example  .gitignore  analysis_session_dump.json  main.py  pyproject.toml
backend/ai/: __init__.py  graph_usage.py  llm_client.py
backend/alembic/: env.py
backend/common/: document_extraction.py  document_types.py  file_storage.py  file_util.py  job_position.py  text_normalizer.py
backend/core/: celery_app.py  config.py  database.py  security.py
backend/dependencies/: auth.py
backend/models/: __init__.py  ai_job.py  audit_base.py  base.py  candidate.py  document.py  interview_question.py  interview_session.py  job_posting.py  job_posting_analysis_report.py  job_posting_experiment_case_result.py  job_posting_experiment_run.py  job_posting_knowledge_chunk.py  job_posting_knowledge_source.py  llm_call_log.py  manager.py  manager_refresh_token.py  prompt_profile.py
backend/repositories/: base_repository.py  candidate_repository.py  interview_question_repository.py  job_posting_experiment_repository.py  job_posting_knowledge_repository.py  job_posting_repository.py  llm_call_log_repository.py  manager_dashboard_repository.py  manager_repository.py  prompt_profile_repository.py  session_repo.py
backend/sample_data/: recruiting_rag_legal_dataset.csv  recruiting_rag_legal_dataset.xlsx
backend/schemas/: auth.py  candidate.py  common.py  job_posting.py  llm_call_log.py  llm_usage.py  manager.py  manager_dashboard.py  session.py  (+2 more)
(+785 files in other folders)
